src/routes/styles.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');

html,
body {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Gurmukhi MT";
    background: var(--v-color-background);
}

body {
    color-scheme: dark;
}

::selection {
    background: var(--v-accent-7);
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
span {
    margin: 0;
    padding: 0;
}

:root {
    --brand-dark: #111113;

	--v-gray-1: #fcfcfc;
	--v-gray-2: #f9f9f9;
	--v-gray-3: #f0f0f0;
	--v-gray-4: #e8e8e8;
	--v-gray-5: #e0e0e0;
	--v-gray-6: #d9d9d9;
	--v-gray-7: #cecece;
	--v-gray-8: #bbbbbb;
	--v-gray-9: #8d8d8d;
	--v-gray-10: #838383;
	--v-gray-11: #646464;
	--v-gray-12: #202020;

	--indigo-1: #fdfdfe;
	--indigo-2: #f7f9ff;
	--indigo-3: #edf2fe;
	--indigo-4: #e1e9ff;
	--indigo-5: #d2deff;
	--indigo-6: #c1d0ff;
	--indigo-7: #abbdf9;
	--indigo-8: #8da4ef;
	--indigo-9: #3e63dd;
	--indigo-10: #3358d4;
	--indigo-11: #3a5bc7;
	--indigo-12: #1f2d5c;

    --red-1: #191111;
    --red-2: #201314;
    --red-3: #3b1219;
    --red-4: #500f1c;
    --red-5: #611623;
    --red-6: #72232d;
    --red-7: #8c333a;
    --red-8: #b54548;
    --red-9: #e5484d;
    --red-10: #ec5d5e;
    --red-11: #ff9592;
    --red-12: #ffd1d9;

    --header-height: 81px;

    /* --v-color-background: var(--v-gray-1);
    --v-color-surface: var(--v-gray-2);
    --v-color-surface-raised: var(--v-gray-3);
    --v-color-text: var(--v-gray-12);
    --v-color-text-contrast: var(--v-gray-1);
    --v-color-text-link: var(--indigo-11);
    --color-accent: var(--indigo-9);
    --color-border: var(--v-gray-6);
    --v-color-text-danger: var(--red-9); */

    --space-xs: 0.25rem;
    --space-s: 0.5rem;
    --space-m: 1rem;
    --space-l: 2rem;
    --space-xl: 4rem;
    /* OLD */
    /* --v-color-text-weak: #d5d6d8; */
    --v-color-text-weak: var(--v-gray-11);
    --v-color-text-placeholder: var(--v-gray-8);
    /* --v-color-text-weak: #161a1d; */
}

@media only screen and (max-width: 700px) { 
    :root {
        /* --header-height: 58px; */
        --header-height: 65px;
    }  
}

/* From Volt UI */

:root {
	/* Font Family */
    --v-font: 'Outfit', system-ui, -apple-system, Roboto, 'Helvetica Neue', Arial, sans-serif;
	--v-font-mono: 'Geist Mono', ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Ubuntu Mono', Consolas, 'Courier New', monospace;

    /* Font Size */
    --v-font-size-xs: 0.6875rem; /* 11px */
    --v-font-size-s: 0.75rem; /* 12px */
    --v-font-size-m: 0.875rem; /* 14px */
    --v-font-size-l: 1rem; /* 16px */
    --v-font-size-xl: 1.25rem; /* 20px */
    --v-font-size-2xl: 1.5rem; /* 24px */
    --v-font-size-3xl: 2.25rem; /* 36px */
    --v-font-size-4xl: clamp(2.5rem, 5vw + 1rem, 3.75rem); /* 60px */

	/* Font Weight */
	--v-font-weight-regular: 400;
	--v-font-weight-bold: 600;
	--v-font-weight-black: 800;

	/* Line Height */
	--v-line-height-xs: 1.8;
	--v-line-height-s: 1.7;
	--v-line-height-m: 1.6;
	--v-line-height-l: 1.5;
	--v-line-height-xl: 1.4;
	--v-line-height-2xl: 1.3;
	--v-line-height-3xl: 1.2;
	--v-line-height-4xl: 1.2;

	/* Letter Spacing */
	--v-letter-spacing-xs: 0.5px;
	--v-letter-spacing-s: 0.25px;
	--v-letter-spacing-m: 0.2px;
	--v-letter-spacing-l: 0.2px;
	--v-letter-spacing-xl: 0.2px;
	--v-letter-spacing-2xl: 0.15px;
	--v-letter-spacing-3xl: 0.1px;
	--v-letter-spacing-4xl: -1px;

    /* Space */
    --v-space-xs: 0.25rem; /* 4px */
    --v-space-s: 0.5rem; /* 8px */
    --v-space-m: 1rem; /* 16px */
    --v-space-l: 1.5rem; /* 24px */
    --v-space-xl: 2.25rem; /* 36px */
    --v-space-2xl: 4.5rem; /* 72px */

    /* Border Radius */
    --v-radius: 9999px;

	/* Breakpoints */
	--v-breakpoint-s: 20rem; /* 320px */
	--v-breakpoint-m: 42rem; /* 672px */
	--v-breakpoint-l: 66rem; /* 1056px */
	--v-breakpoint-xl: 82rem; /* 1312px */
	--v-breakpoint-2xl: 99rem; /* 1584rem */

	/* Muave */
	--v-gray-1: #050505;
	--v-gray-2: #121113;
	--v-gray-3: #1a191b;
	--v-gray-4: #2b292d;
	--v-gray-5: #323035;
	--v-gray-6: #3c393f;
	--v-gray-7: #49474e;
	--v-gray-8: #625f69;
	--v-gray-9: #6f6d78;
	--v-gray-10: #7c7a85;
	--v-gray-11: #b5b2bc;
	--v-gray-12: #eeeef0;

    /* Red */
	--v-danger-1: #191111;
	--v-danger-2: #201314;
	--v-danger-3: #3b1219;
	--v-danger-4: #500f1c;
	--v-danger-5: #611623;
	--v-danger-6: #72232d;
	--v-danger-7: #8c333a;
	--v-danger-8: #b54548;
	--v-danger-9: #e5484d;
	--v-danger-10: #ec5d5e;
	--v-danger-11: #ff9592;
	--v-danger-12: #ffd1d9;

	/* Blue */
	--v-info-1: #0d1520;
	--v-info-2: #111927;
	--v-info-3: #0d2847;
	--v-info-4: #003362;
	--v-info-5: #004074;
	--v-info-6: #104d87;
	--v-info-7: #205d9e;
	--v-info-8: #2870bd;
	--v-info-9: #0090ff;
	--v-info-10: #3b9eff;
	--v-info-11: #70b8ff;
	--v-info-12: #c2e6ff;

	/* Yellow */
	--v-warning-1: #14120b;
	--v-warning-2: #1b180f;
	--v-warning-3: #2d2305;
	--v-warning-4: #362b00;
	--v-warning-5: #433500;
	--v-warning-6: #524202;
	--v-warning-7: #665417;
	--v-warning-8: #836a21;
	--v-warning-9: #ffe629;
	--v-warning-10: #ffff57;
	--v-warning-11: #f5e147;
	--v-warning-12: #f6eeb4;

	/* Green */
	--v-success-1: #0e1512;
	--v-success-2: #121b17;
	--v-success-3: #132d21;
	--v-success-4: #113b29;
	--v-success-5: #174933;
	--v-success-6: #20573e;
	--v-success-7: #28684a;
	--v-success-8: #2f7c57;
	--v-success-9: #30a46c;
	--v-success-10: #33b074;
	--v-success-11: #3dd68c;
	--v-success-12: #b1f1cb;
	
	/* Violet */
	--v-accent-1: #14121f;
	--v-accent-2: #1b1525;
	--v-accent-3: #291f43;
	--v-accent-4: #33255b;
	--v-accent-5: #3c2e69;
	--v-accent-6: #473876;
	--v-accent-7: #56468b;
	--v-accent-8: #6958ad;
	--v-accent-9: #6e56cf;
	--v-accent-10: #7d66d9;
	--v-accent-11: #baa7ff;
	--v-accent-12: #e2ddfe;

    /* Semantic Colors */
    --v-color-background: var(--v-gray-1);

	/* Accent */
	--v-color-accent: var(--v-accent-9);

	/* Surfaces */
    --v-color-surface: var(--v-gray-2);
    --v-color-surface-raised: var(--v-gray-3);
	
	/* Borders */
    --v-color-border: var(--v-gray-4);
	--v-color-border-info: var(--v-info-7);
	--v-color-border-warning: var(--v-warning-7);
	--v-color-border-danger: var(--v-danger-7);
	--v-color-border-success: var(--v-success-7);

	/* Highlight */
	--v-color-highlight:  var(--v-accent-9);

	/* Text colors */
    --v-color-text: var(--v-gray-12);
	--v-color-text-accent: var(--v-accent-11);
	--v-color-text-contrast: var(--v-gray-1);
    --v-color-text-weak: var(--v-gray-11);
    --v-color-text-weaker: var(--v-gray-10);
    --v-color-text-weakest: var(--v-gray-8);

	/* Status Colors */
	--v-color-neutral: var(--v-gray-9);
	--v-color-info: var(--v-info-9);
	--v-color-danger: var(--v-danger-9);
	--v-color-warning: var(--v-warning-9);
	--v-color-success: var(--v-success-9);
}

